--- a/01_baseline.ipynb
+++ b/01_baseline.ipynb
@@ -70,21 +70,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_path=\".\"\n",
     "tfms=tfms\n",
-    "# device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "device = \"mps\"\n",
-    "num_workers = 0\n",
-    "bs=256"
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "# device = \"mps\"\n",
+    "num_workers = 6 \n",
+    "bs=512"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,27 +193,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "preds, loss = do_one_epoch(train_dataloader, train=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +218,6 @@
     "    for epoch in range(epochs):\n",
     "        _, train_loss = do_one_epoch(train_dataloader, train=True)\n",
     "        \n",
-    "            \n",
     "        ## validation\n",
     "        _, val_loss = do_one_epoch(valid_dataloader, train=False)\n",
     "        print_metrics(epoch, train_loss, val_loss)\n",
@@ -238,26 +226,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch:   0, train_loss:      0.321, train_acc: 0.879   ||   val_loss:      0.318, val_acc: 0.887\n",
-      "epoch:   1, train_loss:      0.309, train_acc: 0.885   ||   val_loss:      0.302, val_acc: 0.901\n"
+      "epoch:   0, train_loss:      0.241, train_acc: 0.910   ||   val_loss:      0.249, val_acc: 0.892\n",
+      "epoch:   1, train_loss:      0.223, train_acc: 0.917   ||   val_loss:      0.232, val_acc: 0.897\n",
+      "epoch:   2, train_loss:      0.203, train_acc: 0.925   ||   val_loss:      0.217, val_acc: 0.888\n",
+      "epoch:   3, train_loss:      0.196, train_acc: 0.925   ||   val_loss:      0.213, val_acc: 0.884\n",
+      "epoch:   4, train_loss:      0.180, train_acc: 0.933   ||   val_loss:      0.196, val_acc: 0.894\n"
      ]
     }
    ],
    "source": [
-    "fit(2)"
+    "fit(5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pt13",
+   "display_name": "pt",
    "language": "python",
    "name": "python3"
   },
@@ -271,12 +269,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "1e5fa629357e541ad8d3902d5138fda7216f00b384e6bb50a110b5c1d07c7f67"
+    "hash": "46cdb14809c747b8cc12708199e800e164d76c8b037e620c8b08b57216507c7e"
    }
   }
  },
