--- a/02_baseline_refactored.ipynb
+++ b/02_baseline_refactored.ipynb
@@ -86,12 +86,22 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "d1fd8f3b-9f35-43e0-8025-3971a67849be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config.size = 28"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "cf537eee-51d0-4fc9-bee3-0eb87bd08264",
    "metadata": {},
    "outputs": [],
    "source": [
     "train_tfms = T.Compose([\n",
-    "    T.RandomCrop(28, padding=1), \n",
+    "    T.RandomCrop(config.size, padding=1),     \n",
     "    T.RandomHorizontalFlip(),\n",
     "    T.ToTensor(),\n",
     "    T.Normalize(mean, std),\n",
@@ -109,14 +119,16 @@
   {
    "cell_type": "markdown",
    "id": "ec14fb11-fea2-4f37-85ea-a03c1fbd3399",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Train a custom ConvMixer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "139e5e8a-cbe7-4ecb-afc8-8e5e0136fc96",
    "metadata": {},
    "outputs": [],
@@ -126,12 +138,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "2f95be77-3783-45e6-8542-2080e2588291",
+   "execution_count": 9,
+   "id": "a9bcf2d4-a5b0-4970-9869-cd1938f9d055",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_params = {\"kernel_size\":5, \"dim\":256, \"depth\":10, \"patch_size\":1, \"in_chans\":1, \"num_classes\":10}\n",
+    "model_params = dict(act_layer=nn.modules.activation.Mish, kernel_size=5, \n",
+    "                    dim=512, depth=6, patch_size=2, in_chans=1, num_classes=10)\n",
     "module = ConvMixer(**model_params)\n",
     "module.head = nn.Sequential(\n",
     "    nn.Dropout(0.2), \n",
@@ -139,7 +152,16 @@
     "    nn.Linear(model_params[\"dim\"], model_params[\"num_classes\"], bias=False), \n",
     "    nn.BatchNorm1d(model_params[\"num_classes\"])\n",
     ")\n",
-    "config.model_name = \"convmixer\"\n",
+    "config.model_name = \"convmixer\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "16707ad0-3678-4c8c-af3f-4011b3ea2870",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "config.model_params = model_params\n",
     "config.model_size = model_size(module)\n",
     "config.lsuv = False"
@@ -147,14 +169,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "326ccc65-d321-4ee7-93fa-047e0d2c2a96",
+   "execution_count": 11,
+   "id": "29492b00-b6a3-4197-9319-0f7b6dc79ec3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "if config.lsuv:\n",
+    "    from lsuv import LSUVinit\n",
+    "    module = LSUVinit(module.cuda(), torch.rand(128,1,32,32).cuda());"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "326ccc65-d321-4ee7-93fa-047e0d2c2a96",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 7\u001b[0m\n\u001b[1;32m      3\u001b[0m config\u001b[38;5;241m.\u001b[39mbs \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m256\u001b[39m\n\u001b[1;32m      5\u001b[0m model \u001b[38;5;241m=\u001b[39m FashionTrainer(module, bs\u001b[38;5;241m=\u001b[39mconfig\u001b[38;5;241m.\u001b[39mbs, tfms\u001b[38;5;241m=\u001b[39mtfms)\n\u001b[0;32m----> 7\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompile\u001b[49m\u001b[43m(\u001b[49m\u001b[43mepochs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mconfig\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mepochs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlr\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mconfig\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwd\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mconfig\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwd\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/wandb/fmnist/train.py:101\u001b[0m, in \u001b[0;36mFashionTrainer.compile\u001b[0;34m(self, epochs, lr, wd)\u001b[0m\n\u001b[1;32m     99\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptim \u001b[38;5;241m=\u001b[39m Adan(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39mparameters(), lr\u001b[38;5;241m=\u001b[39mlr, weight_decay\u001b[38;5;241m=\u001b[39mwd)\n\u001b[1;32m    100\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mloss_func \u001b[38;5;241m=\u001b[39m nn\u001b[38;5;241m.\u001b[39mCrossEntropyLoss()\n\u001b[0;32m--> 101\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mschedule \u001b[38;5;241m=\u001b[39m \u001b[43mOneCycleLR\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43moptim\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m    102\u001b[0m \u001b[43m                           \u001b[49m\u001b[43mmax_lr\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mlr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m    103\u001b[0m \u001b[43m                           \u001b[49m\u001b[43mpct_start\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.1\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m    104\u001b[0m \u001b[43m                           \u001b[49m\u001b[43mtotal_steps\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mepochs\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain_dataloader\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/mambaforge/envs/pt/lib/python3.9/site-packages/torch/optim/lr_scheduler.py:1556\u001b[0m, in \u001b[0;36mOneCycleLR.__init__\u001b[0;34m(self, optimizer, max_lr, total_steps, epochs, steps_per_epoch, pct_start, anneal_strategy, cycle_momentum, base_momentum, max_momentum, div_factor, final_div_factor, three_phase, last_epoch, verbose)\u001b[0m\n\u001b[1;32m   1554\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m m_momentum, b_momentum, group \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(max_momentums, base_momentums, optimizer\u001b[38;5;241m.\u001b[39mparam_groups):\n\u001b[1;32m   1555\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39muse_beta1:\n\u001b[0;32m-> 1556\u001b[0m         _, beta2 \u001b[38;5;241m=\u001b[39m group[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbetas\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m   1557\u001b[0m         group[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbetas\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m (m_momentum, beta2)\n\u001b[1;32m   1558\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+     ]
+    }
+   ],
+   "source": [
     "config.epochs = 5\n",
-    "config.lr = 1e-2\n",
-    "config.bs = 128\n",
+    "config.lr = 5e-2\n",
+    "config.bs = 256\n",
     "\n",
     "model = FashionTrainer(module, bs=config.bs, tfms=tfms)\n",
     "\n",
@@ -163,18 +211,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "7e7514be-b9fd-4a8b-a014-1c8e961d1d89",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train\n",
+    "run = wandb.init(project=WANDB_PROJECT, entity=WANDB_ENTITY, config=config)\n",
+    "model.fit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82a57cc9-8a5b-4a24-a787-df948a8a8c62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wandb.finish()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ecd0d3c8-278e-4fb2-8264-c8728ceb98d7",
+   "metadata": {},
+   "source": [
+    "## Jeremy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ac16867-1cf0-4e22-8bb9-352ca9baefba",
+   "metadata": {},
+   "source": [
+    "============================="
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "2da93476-dda7-4b09-90ed-766f4159f5c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from jeremy_resnet import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "68dc368a-29c4-4328-b0ba-c9ff7cfa0d31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iw = partial(init_weights, leaky=0.0003)\n",
+    "config.model_params = dict(act=nn.Mish, norm=nn.BatchNorm2d, nfs=(16,32,64,128,256,256))\n",
+    "module = get_model(**config.model_params).apply(iw)\n",
+    "config.model_name = \"jeremy_resnet\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "7c2c1288-df7f-4652-b20c-ba985903b6b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config.epochs = 5\n",
+    "config.lr = 5e-2\n",
+    "config.bs = 160\n",
+    "\n",
+    "model = FashionTrainer(module, bs=config.bs, tfms=tfms)\n",
+    "\n",
+    "model.compile(epochs=config.epochs, lr=config.lr, wd=config.wd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "31c9d93a-f775-4f30-953b-e249e27db4fd",
+   "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Failed to detect the name of this notebook, you can set it manually with the WANDB_NOTEBOOK_NAME environment variable to enable code saving.\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mcapecape\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -190,7 +307,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>/home/tcapelle/wandb/fmnist/wandb/run-20230105_202906-jsh0p7lj</code>"
+       "Run data is saved locally in <code>/home/tcapelle/wandb/fmnist/wandb/run-20230106_155502-3cjuk0uz</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -202,7 +319,7 @@
     {
      "data": {
       "text/html": [
-       "Syncing run <strong><a href=\"https://wandb.ai/capecape/fmnist_bench/runs/jsh0p7lj\" target=\"_blank\">cool-shadow-155</a></strong> to <a href=\"https://wandb.ai/capecape/fmnist_bench\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://wandb.me/run\" target=\"_blank\">docs</a>)<br/>"
+       "Syncing run <strong><a href=\"https://wandb.ai/capecape/fmnist_bench/runs/3cjuk0uz\" target=\"_blank\">young-plasma-183</a></strong> to <a href=\"https://wandb.ai/capecape/fmnist_bench\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://wandb.me/run\" target=\"_blank\">docs</a>)<br/>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -244,7 +361,7 @@
        "\n",
        "    <div>\n",
        "      <progress value='5' class='' max='5' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      100.00% [5/5 05:36&lt;00:00]\n",
+       "      100.00% [5/5 00:37&lt;00:00]\n",
        "    </div>\n",
        "    "
       ],
@@ -333,7 +450,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch:   0, train_loss:      0.545, train_acc: 0.842   ||   val_loss:      0.512, val_acc: 0.895\n"
+      "epoch:   0, train_loss:      0.671, train_acc: 0.771   ||   val_loss:      0.644, val_acc: 0.824\n"
      ]
     },
     {
@@ -414,7 +531,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch:   1, train_loss:      0.274, train_acc: 0.906   ||   val_loss:      0.276, val_acc: 0.899\n"
+      "epoch:   1, train_loss:      0.415, train_acc: 0.845   ||   val_loss:      0.415, val_acc: 0.847\n"
      ]
     },
     {
@@ -495,7 +612,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch:   2, train_loss:      0.221, train_acc: 0.924   ||   val_loss:      0.220, val_acc: 0.924\n"
+      "epoch:   2, train_loss:      0.353, train_acc: 0.869   ||   val_loss:      0.355, val_acc: 0.872\n"
      ]
     },
     {
@@ -576,7 +693,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch:   3, train_loss:      0.176, train_acc: 0.940   ||   val_loss:      0.176, val_acc: 0.936\n"
+      "epoch:   3, train_loss:      0.297, train_acc: 0.889   ||   val_loss:      0.294, val_acc: 0.897\n"
      ]
     },
     {
@@ -657,7 +774,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch:   4, train_loss:      0.133, train_acc: 0.955   ||   val_loss:      0.138, val_acc: 0.942\n"
+      "epoch:   4, train_loss:      0.258, train_acc: 0.904   ||   val_loss:      0.258, val_acc: 0.904\n"
      ]
     }
    ],
@@ -669,8 +786,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "82a57cc9-8a5b-4a24-a787-df948a8a8c62",
+   "execution_count": 29,
+   "id": "ad141f91-67fe-4ad8-965a-82d6e6c413b0",
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +810,7 @@
        "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
        "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
        "    </style>\n",
-       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>epoch</td><td>▁▃▅▆█</td></tr><tr><td>learning_rate</td><td>▂▂▅▇██████▇▇▇▇▇▆▆▆▆▅▅▅▄▄▄▃▃▃▃▂▂▂▂▂▁▁▁▁▁▁</td></tr><tr><td>train_acc</td><td>▁▅▆▇█</td></tr><tr><td>train_loss</td><td>██▆▅▄▂▃▃▃▃▃▃▂▂▂▃▂▂▁▃▃▁▂▂▃▁▂▂▂▂▁▂▁▃▂▁▁▁▁▁</td></tr><tr><td>val_acc</td><td>▁▂▅▇█</td></tr><tr><td>val_loss</td><td>█▄▃▂▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>epoch</td><td>4</td></tr><tr><td>learning_rate</td><td>0.0</td></tr><tr><td>train_acc</td><td>0.95517</td></tr><tr><td>train_loss</td><td>0.19313</td></tr><tr><td>val_acc</td><td>0.9415</td></tr><tr><td>val_loss</td><td>0.13838</td></tr></table><br/></div></div>"
+       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>epoch</td><td>▁▃▅▆█</td></tr><tr><td>learning_rate</td><td>▁▂▅▇██████▇▇▇▇▇▆▆▆▆▅▅▅▄▄▄▃▃▃▃▂▂▂▂▁▁▁▁▁▁▁</td></tr><tr><td>model_size</td><td>▁</td></tr><tr><td>train_acc</td><td>▁▅▆▇█</td></tr><tr><td>train_loss</td><td>█▆▄▆▄▄▃▃▃▃▃▃▃▂▁▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▁▁▁▂▂▂▂▂▂</td></tr><tr><td>val_acc</td><td>▁▃▅▇█</td></tr><tr><td>val_loss</td><td>█▄▃▂▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>epoch</td><td>4</td></tr><tr><td>learning_rate</td><td>0.0</td></tr><tr><td>model_size</td><td>2409604</td></tr><tr><td>train_acc</td><td>0.90388</td></tr><tr><td>train_loss</td><td>0.20969</td></tr><tr><td>val_acc</td><td>0.9043</td></tr><tr><td>val_loss</td><td>0.2576</td></tr></table><br/></div></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -705,7 +822,7 @@
     {
      "data": {
       "text/html": [
-       "Synced <strong style=\"color:#cdcd00\">cool-shadow-155</strong>: <a href=\"https://wandb.ai/capecape/fmnist_bench/runs/jsh0p7lj\" target=\"_blank\">https://wandb.ai/capecape/fmnist_bench/runs/jsh0p7lj</a><br/>Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
+       "Synced <strong style=\"color:#cdcd00\">young-plasma-183</strong>: <a href=\"https://wandb.ai/capecape/fmnist_bench/runs/3cjuk0uz\" target=\"_blank\">https://wandb.ai/capecape/fmnist_bench/runs/3cjuk0uz</a><br/>Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -717,7 +834,7 @@
     {
      "data": {
       "text/html": [
-       "Find logs at: <code>./wandb/run-20230105_202906-jsh0p7lj/logs</code>"
+       "Find logs at: <code>./wandb/run-20230106_155502-3cjuk0uz/logs</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -729,32 +846,6 @@
    ],
    "source": [
     "wandb.finish()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1ac16867-1cf0-4e22-8bb9-352ca9baefba",
-   "metadata": {},
-   "source": [
-    "============================="
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3fd0025a-a0a5-4f72-9f2d-ff13b5cf9ef1",
-   "metadata": {},
-   "source": [
-    "## Power off the instance\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cdbef1ca-83a0-4b10-81f4-9eb22491da64",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!sudo poweroff"
    ]
   }
  ],
