remove unused files

--- a/other_stuff/02_baseline_refactored.ipynb
+++ b/other_stuff/02_baseline_refactored.ipynb
@@ -31,8 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "WANDB_PROJECT = \"fmnist_bench\"\n",
-    "WANDB_ENTITY = \"capecape\""
+    "WANDB_PROJECT = \"fmnist_pt\"\n",
+    "WANDB_ENTITY = \"fastai\""
    ]
   },
   {
